syntax = "proto3";
package cryptocurrency;

message CreateAcctTx { string name = 1; }

message DepositTx {
  string account = 1;
  uint64 amount = 2;
}

message TransferTx {
  string recipient = 1;
  uint64 amount = 2;
}